--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="remember_me">Remember me</string>
     <string name="forgot_password">Forgot password?</string>
     <string name="lbl_forgot_password">Forgot password</string>
+    <string name="lbl_new_message">New Message</string>
     <string name="lbl_all_reviews">All Reviews</string>
     <string name="lbl_home">Home</string>
     <string name="login">Login</string>
@@ -17,6 +18,7 @@
     <string name="otp_instruction">Please enter the 6 digit verification code sent on your email.</string>
     <string name="lbl_verify">Verify</string>
     <string name="lbl_send_otp">Send OTP</string>
+    <string name="lbl_send">Send</string>
     <string name="lbl_not_receive_code">Didn\'t received the code?&#160;<u><font color='#70A6F2'>Resend Code</font></u></string>
     <string name="enter_email">Please enter your email address</string>
     <string name="title_sign_up">Sign Up</string>
@@ -51,7 +53,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_messages">Messages</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="password_required">Password is required</string>
     <string name="password_donot_match">Passwords donot match</string>
@@ -70,6 +72,12 @@
     <string name="enter_description">Enter Description</string>
     <string name="description"> Description</string>
     <string name="lbl_description"> Description cannot be empty.</string>
+    <string name="lbl_text"> Text cannot be empty.</string>
+    <string name="received"><u>Received</u></string>
+    <string name="sent"><u>Sent</u></string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enter_text_here">Enter text here</string>
 
 
 </resources>
