--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">My Application</string>
     <string name="splash_tagline">Find a Teacher, Find a Student</string>
     <string name="lbl_change_password">Please enter your new password</string>
+    <string name="settigns_change_password">Change Password</string>
     <string name="sign_in">Sign In</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
@@ -80,6 +81,11 @@
     <string name="lbl_no_messages">No messages yet.</string>
     <string name="lbl_review">Reviews</string>
     <string name="lbl_settings">Settings</string>
+    <string name="lbl_logout">Logout</string>
+    <string name="lbl_language">Language</string>
+    <string name="lbl_change_language">Change Language</string>
+    <string name="edit_user_name">Edit User Name</string>
+    <string name="save">Save</string>
 
 
 </resources>
